--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
-body {
+.container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* debug */
+    min-height: 500px;
+}
+
+.slider {
+    width: 40%;
+    /* debug */
+    min-height: 300px;
+    background-color: orange;
+}
+
+.items-container {
+    min-height: 300px;
     background-color: red;
+    border: 1px solid black;
+    position: relative;
+}
+
+img {
+    width: 100%;
+}
+
+.hidden {
+    display: none;
 }
