--- a/style.css
+++ b/style.css
@@ -48,6 +48,14 @@ img {
     width: 100%;
 }
 
+.item {
+    display: none;
+}
+
+.active {
+    display: block;
+}
+
 .hidden {
     display: none;
 }
