--- a/style.css
+++ b/style.css
@@ -4,20 +4,20 @@
     justify-content: center;
     align-items: center;
     /* debug */
-    min-height: 500px;
+    /* min-height: 500px; */
 }
 
 .slider {
     width: 40%;
     /* debug */
-    min-height: 300px;
-    background-color: orange;
+    /* min-height: 300px;
+    background-color: orange; */
 }
 
 .items-container {
-    min-height: 300px;
-    background-color: red;
-    border: 1px solid black;
+    /* min-height: 300px; */
+    /* background-color: red; */
+    /* border: 1px solid black; */
     position: relative;
 }
 
@@ -37,7 +37,7 @@
 }
 
 .fa-chevron-up {
-    top: 0;
+    top: 20px;
 }
 
 .fa-chevron-down {
@@ -46,10 +46,13 @@
 
 img {
     width: 100%;
+    height: 200px;
+    object-fit: cover;
 }
 
 .item {
     display: none;
+    height: 200px ;
 }
 
 .active {
